# metavoice-challenge

./: .gitignore  Makefile  README.md  config.py  pyproject.toml
dags/: atomic_tasks.py  batch_test.py  config.py  direct_mapping_dag.py  parallel_token_transcribe.py  test_dag.py  test_dag_one_by_one_filename_task.py
fastapi_server/: app.py
notebooks/: 01.audio_experiments.ipynb
src/: data_ingester.py  duration_writer.py
